nginx-ingress/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: kube-system
  name: kdash-kubernetes-dashboard
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/server-snippet: |
    #              proxy_ssl_verify off;
    #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: pc0
      http:
      paths:
        - path: /
          backend:
          serviceName: kdash-kubernetes-dashboard
          servicePort: 443
        - path: /*
          backend:
          serviceName: kdash-kubernetes-dashboard
          servicePort: 443
status:
  loadBalancer:
    ingress:
      - ip: 192.168.1.241
